# Forecasting-Sticker-Sales

./: .gitignore  README.md  claude-generated-code.ipynb  config.yaml  pyproject.toml  submission.csv
src/: main.py  train.py
