[project]
name = "forecasting-sticker-sales"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "scikit-learn>=1.6.0",
    "lightgbm>=4.5.0",
    "holidays>=0.63",
    "black>=24.10.0",
    "optuna>=4.1.0",
    "matplotlib>=3.10.0",
    "selenium",
    "seaborn>=0.13.2",
    "xgboost>=2.1.3",
    "catboost>=1.2.7",
]
