[project]
name = "forecasting-sticker-sales"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "jupyter>=1.1.1",
    "lab>=8.3",
    "scikit-learn>=1.6.0",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "xgboost>=2.1.3",
    "lightgbm>=4.5.0",
    "catboost>=1.2.7",
]
